@@ -4,6 +4,9 @@ Supported Presently
 
 Changelog for 1.3.45
 * Cleaned up sql files so App::LedgerSMB::Admin (Chris T)
+* Fixed pricematrix prices not respected for vendors (Chris T, bug 1230)
+
+Chris T is Chris Travers
 
 Changelog for 1.3.44
 * Allow blank salutations, bug 1204. (Chris T)
